--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A basic app to deploy",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "node index.js"
   },
   "keywords": [
     "node",
@@ -13,6 +14,9 @@
   "author": "Vaishav Eega",
   "license": "ISC",
   "type": "commonjs",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0"
